--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,11 @@ eureka:
       defaultZone: http://localhost:8761/eureka
     instance:
       hostname: localhost
+
+resilience4j:
+  ratelimiter:
+    instances:
+      multiRate:
+        limitForPeriod: 2
+        limitRefreshPeriod: 5s
+        timeoutDuration: 2s
