--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,3 +26,9 @@ resilience4j:
         limitForPeriod: 2
         limitRefreshPeriod: 5s
         timeoutDuration: 2s
+
+  retry:
+    instances:
+      basic:
+        maxRetryAttempts: 3
+        waitDuration: 8s
