--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/customersdb
-spring.datasource.username=root
-spring.datasource.password = sapassword
-server.port = 8081
+#spring.datasource.url=jdbc:mysql://localhost:3306/customersdb
+#spring.datasource.username=root
+#spring.datasource.password = sapassword
+#server.port = 8081
