--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@
 #spring.datasource.username=root
 #spring.datasource.password = sapassword
 #server.port = 8081
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.jdbc.lob.non_contextual_creation=true
