--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,18 +6,7 @@ spring:
     import: "optional:configserver:"
     cloud:
       config:
-        uri: http://localhost:8888/
-
-eureka:
-  client:
-    register-with-eureka:
-      value: true
-    fetch-registry:
-      value: true;
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    instance:
-      hostname: localhost
+        uri: https://n5-subprj-cloudserver.herokuapp.com/
 
 resilience4j:
   ratelimiter:
