--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@
 #spring.datasource.password = sapassword
 #server.port = 8081
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.jdbc.lob.non_contextual_creation=true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.jdbc.lob.non_contextual_creation=true
