--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,15 @@ spring:
       config:
         uri: https://n5-subprj-cloudserver.herokuapp.com/
 
+eureka:
+  instance:
+    hostname: n5-subprj-customer.herokuapp.com
+    homePageUrl: https://${eureka.instance.hostName}/
+    home-page-url-path: https://${eureka.instance.hostName}
+  client:
+    serviceUrl:
+      defaultZone: https://n5-subprj-eurekaserver.herokuapp.com/eureka
+
 resilience4j:
   ratelimiter:
     instances:
