--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.jdbc.lob.non_contextual_creation=true
+
+eureka.instance.non-secure-port-enabled=true
+eureka.instance.secure-port-enabled=false
+eureka.instance.non-secure-port=80
+eureka.instance.secure-port=443
