--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     import: "optional:configserver:"
     cloud:
       config:
+        enabled: true
         uri: https://n5-subprj-cloudserver.herokuapp.com/
 
 eureka:
