--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
 
   config:
     import: "optional:configserver:"
-    cloud:
-      config:
-        enabled: true
-        uri: https://n5-subprj-cloudserver.herokuapp.com/
+#    cloud:
+#      config:
+#        enabled: true
+#        uri: https://n5-subprj-cloudserver.herokuapp.com/
 
 eureka:
   instance:
