--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-config</artifactId>
+            <version>3.0.5</version>
         </dependency>
         <dependency>
             <groupId>io.github.resilience4j</groupId>
