--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,14 +5,14 @@ spring:
   application:
     name: CUSTOMER-SERVICE
 
-eureka:
-  instance:
-    hostname: n5-subprj-customer.herokuapp.com
-    homePageUrl: https://${eureka.instance.hostName}/
-    home-page-url-path: https://${eureka.instance.hostName}
-  client:
-    serviceUrl:
-      defaultZone: https://n5-subprj-eurekaserver.herokuapp.com/eureka
+#eureka:
+#  instance:
+#    hostname: n5-subprj-customer.herokuapp.com
+#    homePageUrl: https://${eureka.instance.hostName}/
+#    home-page-url-path: https://${eureka.instance.hostName}
+#  client:
+#    serviceUrl:
+#      defaultZone: https://n5-subprj-eurekaserver.herokuapp.com/eureka
 
 resilience4j:
   ratelimiter:
